# RPGEngine

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md
resources/: ResourcesLayout.md
resources/animations/: _Attack.json  _Run.json  char1_walk.json
resources/docs/: Entity.md  Events.md  Party_Temp.md  scene_transitions.md
resources/docs/JSON schema/: Entity.schema.json  UI.schema.json
resources/enemies/: Morbol.json
resources/entities/: Celes.json  Character.json  Player.json
resources/misc/: environments.json
resources/ui/: BattleBanner.json  BattleLeft.json  BattleMid.json  BattleRight.json
src/: main.cpp  main.h
src/game/: EntityManager.cpp  EntityManager.h  GlobalState.cpp  GlobalState.h  InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  SpriteBatch.cpp  SpriteBatch.h
src/game/battle/: Attributes.h  ElementalAffinity.h  Enemy.cpp  Enemy.h  Job.h  PartyMember.cpp  PartyMember.h
src/game/entities/: BattleEntity.cpp  BattleEntity.h  Entity.cpp  Entity.h  GlobalEntity.cpp  GlobalEntity.h  IBaseEntity.h  OverworldEntity.cpp  OverworldEntity.h
src/game/events/: Event.h  EventPoller.cpp  EventPoller.h
src/game/gfx/: Camera.cpp  Camera.h  DrawCommand.h  Environment.cpp  Environment.h  Sprite.cpp  Sprite.h
src/game/gfx/animations/: Animation.cpp  Animation.h  AnimationStateMachine.cpp  AnimationStateMachine.h
src/game/misc/: macros.h
src/game/scenes/: BattleScene.cpp  BattleScene.h  Environment.cpp  Environment.h  Map.cpp  Map.h  OverworldScene.cpp  OverworldScene.h  Scene.cpp  Scene.h
src/game/state/: GlobalState.cpp  GlobalState.h
src/game/ui/: Font.cpp  Font.h  Text.h  UIElement.cpp  UIElement.h  UIManager.cpp  UIManager.h
src/game/world/: Maps.cpp  Maps.h
src/math/: MiscMath.h  Vector2.cpp  Vector2.h  Vector2Impl.cpp
src/tools/: ImagePacker.cpp  ImagePacker.h  MapLoader.cpp  MapLoader.hpp  Tile.h  Timer.cpp  Timer.h
